test/Fail/Issue6108.err
Issue6108.agda:22.1-23.30: error: [TerminationIssue]
Termination checking failed for the following functions:
  r
Problematic calls:
  r i
    (at Issue6108.agda:23.26-27)

Issue6108.agda:27.1-8: error: [UnequalTerms]
The terms
  x
and
  r i0 .R.force
are not equal at type D
when checking the definition of loops
